--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "homepage": "https://github/mrothNET/textfile.js",
   "license": "MIT",
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
   "dependencies": {
     "@types/node": "^13.5.0"
   }
