--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github/mrothNET/textfile.js.git"
+    "url": "https://github.com/mrothNET/textfile.js.git"
   },
-  "homepage": "https://github/mrothNET/textfile.js",
+  "homepage": "https://github.com/mrothNET/textfile.js",
   "license": "MIT",
   "files": [
     "index.js",
