--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@mrothnet/textfile",
   "version": "0.2.0",
   "description": "Reading and writing UTF-8 encoded textfiles",
+  "keywords": [ "utf-8", "utf8", "text", "read", "write", "append", "create", "file"],
   "main": "index.js",
   "types": "index.d.ts",
   "author": {
